added the country code link, 2

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ pre code {
 
 
 <h1 class="title toc-ignore">Guidelines for Studies in the Department of Ecological Dynamics of the IZW</h1>
-<h4 class="date">Last Update: July 15, 2021</h4>
+<h4 class="date">Last Update: July 19, 2021</h4>
 
 </div>
 
@@ -329,7 +329,7 @@ Email: wenzler[at]izw-berlin.de</p>
 <li>Everything should be written in small letters.</li>
 <li>Avoid spaces or hyphen in the path to the file.</li>
 <li>Species name should be in latin and please use your surname and the first letter of your given name at the end.</li>
-<li>Country should be the international abbreviation.</li>
+<li>Country should be the international abbreviation (<a href="https://de.wikipedia.org/wiki/ISO-3166-1-Kodierliste" class="uri">https://de.wikipedia.org/wiki/ISO-3166-1-Kodierliste</a>).</li>
 </ul>
 <p>The root project folder should hold:</p>
 <ul>
